--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <img src="./images/2.png" alt="Капибара">
     <div>
         <a href="./index.html">Назад</a>
-        <a href="./kapibara2.html">Следующая капибара</a>
+        <a href="./index2.html">Следующая капибара</a>
     </div>
 </body>
 
