--- a/index2.html
+++ b/index2.html
@@ -40,8 +40,8 @@
 <body>
     <img src="./images/3.png" alt="Капибара">
     <div>
-        <a href="./kapibara1.html">Назад</a>
-        <a href="./kapibara3.html">Следующая капибара</a>
+        <a href="./index1.html">Назад</a>
+        <a href="./index3.html">Следующая капибара</a>
     </div>
 </body>
 
