--- a/index3.html
+++ b/index3.html
@@ -40,7 +40,7 @@
 <body>
     <img src="./images/4.png" alt="Капибара">
     <div>
-        <a href="./kapibara2.html">Назад</a>
+        <a href="./index2.html">Назад</a>
         <a href="./index.html">На главную</a>
     </div>
 </body>
