--- a/index.html
+++ b/index.html
@@ -5,39 +5,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Другая капибара</title>
+    <title>Это Капибара</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <style>
-
         body {
             text-align: center;
             font-family: "StratosSkyeng", sans-serif;
         }
+        h1 {
+            font-size: 40px;
+        }
 
+        h2 {
+            font-size: 30px;
+        }
+        p {
+            font-size: 20px;
+            margin-top: 15px;
+            text-align: left;
+        }
+        div {
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 50px;
+            width: 700px;
+        }
         img {
             margin-top: 50px;
-            width: 1200px;
+            width: 800px;
             border-radius: 25px;
         }
 
-        div {
-            text-align: center;
-        }
-
         a {
-            display: inline-block;
+            display: block;
             font-size: 25px;
-            margin: 15px;
+            margin: 50px;
         }
-
     </style>
 </head>
 
 <body>
-    <img src="./images/2.png" alt="Капибара">
+    <img src="./images/1.png" alt="Капибара">
     <div>
-        <a href="./index.html">Назад</a>
-        <a href="./index2.html">Следующая капибара</a>
+        <h1>Это капибара ☝️</h1>
+        <p>Самый большой грызун в мире. Мягкий, пушистый и очень дружелюбный.</p>
     </div>
+    <div>
+        <h2>Где обитают</h2>
+        <p>Капибары обитают в Южной Америке в умеренных и тропических областях, как правило возле водоемов. </p>
+        <p>Ну необходима им вода, что тут поделать...</p>
+    </div>
+    <div>
+        <h2>Чем питаются</h2>
+        <p>Капибары едят почти всё, что растет возле воды. Зачем далеко ходить, когда можно поесть прямо из ванны? А
+            покушать они любят. 🙃 Поэтому и весят до 65 кг!</p>
+    </div>
+    <div>
+        <h2>Чем живут</h2>
+        <p>Капибары обожают купаться, тусить с другими капибарами и загорать.</p>
+        <p>Капибарам не чуждо общение и с другими животными, и с людьми.</p>
+        <p>В общем, капибары - хорошие конкуренты кошкам и собакам! 😀</p>
+    </div>
+    <a href="./kapibara1.html">Другая капибара</a>
 </body>
 
 </html>
